corpus/declaration.txt
=====================================
Declaration
=====================================

BINARYID = 0
IDLENGTH = LEN(ID)

---

(source_file 
  (declaration (identifier) (integer)) 
  (declaration (identifier) (method_call (identifier) (parameter_list (parameter (identifier))))))

=====================================
Identifiers
=====================================

ABC
ABC.DEF
ABC.DEF.HIG

---

(source_file 
  (identifier)
  (identifier)
  (identifier))
